<resources>


    <string name="app_name">Senses</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_dashboard">Senses</string>
    
    <string name="atest">显示当前状态</string>
    <string name="getlocation">获取地理位置</string>
    <string name="localmsg">本地动态</string>
    <string name="notification">通知</string>
    <string name="contact">联系人</string>
    <string name="message">信息</string>
    <string name="setting">设置</string>
   	<string name="cancel">取消</string>
   	<string name="send">发送</string>
   	<string name="mail">邮箱</string>
   	<string name="username">用户名</string>
   	<string name="password">密码</string>
   	<string name="login">登录</string>
   	<string name="register">注册</string>
   	<string name="startuse">立即体验</string>
   	<string name="map">地图</string>
   	<string name="writemsg">发布动态</string>
   	<string name="todo">TODO</string>
   	<string name="apps">Apps</string>
   	<string name="copyright">Copyright@Senses 2013</string>
   	
   	
   	
   	<string name="alpha">Alpha</string>
    <string name="animate">Animate</string>
    <string name="basic_map">Basic Map</string>
    <string name="basic_description">Launches a map</string>
    <string name="camera_demo">Camera</string>
    <string name="camera_description">Demonstrates camera functions.</string>
    <string name="clear_map">Clear</string>
    <string name="compass">Compass</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">AMapsV2  Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="hue">Hue</string>
    <string name="events_demo">Events</string>
       <string name="events_description">Demonstrates events functions.</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="go_to_zhongguancun">去中关村</string>
    <string name="go_to_lujiazui">去陆家嘴</string>
    <string name="groundoverlay_demo">Ground Overlays</string>
    <string name="groundoverlay_description">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="hybrid">Hybrid</string>
    <string name="location">location is  doing</string>

    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>

    <string name="layers_demo">Layers</string>
    <string name="layers_description">Demonstrates the different map layers.</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationsource_demo">Location Source Demo</string>
    <string name="locationsource_description">Demonstrates how to use a custom location source.</string>
    <string name="locationmanagerproxy_description">Demonstrates how to use LocationManagerProxy </string>
    <string name="locationmanagerproxy_demo">LocationManagerProxy Demo</string>
    <string name="marker_demo">Markers</string>
    <string name="marker_description">Demonstrates how to add Markers to a map.</string>
    <string name="multi_map_demo">Multiple Maps</string>
    <string name="multi_map_description">Demonstrates how to show multiple maps in a single activity.</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_button">MyLocation Button</string>
    <string name="mylocation_layer">MyLocation Layer</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="options_demo">Options</string>
    <string name="options_description">Demonstrates how to use Options to initialize a map.</string>
    <string name="polygon_demo">Polygons</string>
    <string name="polygon_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polyline_demo">Polylines</string>
    <string name="polyline_description">Demonstrates how to add Polylines to a map.</string>
    <string name="programmatic_demo">Programmatically add map</string>
    <string name="programmatic_description">Demonstrates how to add a MapFragment programmatically.</string>
    <string name="properties_sydney_polyline">Properties for Sydney Polyline</string>
    <string name="properties_sydney_polygon">Properties for Sydney Polygon</string>
    <string name="route_demo">Route</string>
    <string name="reoute_description">Demonstrates how to add route to a map.</string>
    <string name="rotate">Rotate Gestures</string>
    <string name="raw_mapview_demo">Raw MapView</string>
    <string name="raw_mapview_description">Demonstrates how to use a raw MapView.</string>
    <string name="reset_map">Reset</string>
    <string name="retain_map">Retain map</string>
    <string name="retain_map_description">Demonstrates how to reuse a MapFragment.</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">Scroll Gestures</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="terrain">Terrain</string>
    <string name="tile_overlay_demo">Tile Overlays</string>
    <string name="tile_overlay_description">Demonstrates how to add a tile overlay to a map.</string>
    <string name="tilt">Tilt Gestures</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="uisettings_demo">UI Settings</string>
    <string name="uisettings_description">Demonstrates how to alter user interface settings.</string>
    <string name="geocoder_demo">geocoder</string>
    <string name="geocoder_description">Demonstrates how to use geocoder.</string>
    <string name="poisearch_demo">poisearch</string>
    <string name="poisearch_description">Demonstrates how to poisearch to a map.</string>
    <string name="search_title">poisearch  key</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">Zoom Buttons</string>
    <string name="zoom_gestures">Zoom Gestures</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
   	
   	

   	

   	
</resources>
