<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:gravity="center"
            android:text="Senses"
            android:textColor="#ccc"
            android:textSize="80px" />

    </LinearLayout>

 

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/mail" >
            </TextView>

            <EditText
                android:id="@+id/login_mail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/password" >
            </TextView>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </TableRow>
        

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>

            <Button
                android:id="@+id/to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>

            <Button
                android:id="@+id/login_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
    
                android:text="测试账号" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/copyright" />

    </RelativeLayout>


</LinearLayout>