<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:gravity="center"
            android:text="Senses"
            android:textColor="#ccc"
            android:textSize="80px" />

    </LinearLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/mail" >
            </TextView>

            <EditText
                
                android:id="@+id/mail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" >
            </EditText>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/username" >
            </TextView>

            <EditText
                android:id="@+id/username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/password" >
            </TextView>

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword" >
            </EditText>
        </TableRow>
<!-- 
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="上传头像" >
            </TextView>

            <LinearLayout>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#fff" />

                <Button
                    android:id="@+id/registerbtn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:text="@string/register" />
            </LinearLayout>
            
        </TableRow>
         -->
 
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>

            <Button
                android:id="@+id/registerbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </TableRow>
        
        
    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/copyright" />

    </RelativeLayout>


</LinearLayout>