<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1" >

	  <TextView  
	    android:id="@+id/myLocation"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/location"
	    />

        <EditText
            android:id="@+id/msgcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine" >

            <requestFocus android:layout_width="match_parent" />

        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bgs" >

   <!--      <Button
            android:id="@+id/sendbtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:text="@string/send" />
             -->
        <ImageButton
            android:id="@+id/sendbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:background="@drawable/corners_bg"
            android:src="@drawable/ok" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/sendbtn"
            android:layout_toRightOf="@+id/cancelbtn"
            android:gravity="center"
            android:text="@string/writemsg"
            android:textSize="20dp"
            android:textStyle="bold" />

   <!--       <Button
            android:id="@+id/cancelbtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:text="@string/cancel" />
            -->
        <ImageButton
            android:id="@+id/cancelbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:background="@drawable/corners_bg"
            android:src="@drawable/back" />

    </RelativeLayout>
    
    

</RelativeLayout>